# sb-lite

./: AGENTS.md  Cargo.toml  build.rs  fix_index.patch  fix_merge_routing.py  flake.nix  patch.diff  patch_build.rs  patch_config.tsx  patch_config2.js  patch_config2.tsx  patch_main.rs  patch_merge_prefix.py  patch_state.rs  patch_state_prefix.py  patch_web_prefix.py
.github/workflows/: release.yml
openwrt/: Makefile
openwrt/files/: sblite.init
openwrt/sblite/: Makefile
openwrt/sblite/files/: sblite.init
src/: handlers.rs  main.rs  merge.rs  router.rs  state.rs
web/: index.html  index.html.orig  mock-server.js  package-lock.json  package.json  screenshot.js  verify.py  vite.config.ts
web/src/: App.tsx  index.css
web/src/contexts/: CoreContext.tsx  SingBoxContext.tsx
web/src/layouts/: DashboardLayout.tsx
web/src/pages/: Config.tsx  Connections.tsx  Logs.tsx  Overview.tsx
