[package]
name = "sing-box-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
mime_guess = "2.0.5"
rust-embed = "8.11.0"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "fs"] }
which = "8.0.0"
