[package]
name = "sing-box-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
bincode = "1.3"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
log = "0.4.29"
mime_guess = "2.0.5"
reqwest = { version = "0.13.2", features = ["default-tls"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "fs"] }
which = "8.0.0"
