[package]
name = "sing-box-lite"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws"] }
bincode = "1.3"
chrono = { version = "0.4.44", features = ["serde"] }
clap = { version = "4.5.60", features = ["derive"] }
env_logger = "0.11.9"
futures-util = { version = "0.3.32", features = ["sink"] }
log = "0.4.29"
mime_guess = "2.0.5"
regex = "1.12.3"
reqwest = { version = "0.13.2", features = ["default-tls", "json"] }
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.8"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "net", "fs", "process", "sync"] }
tokio-tungstenite = "0.28.0"
zstd = "0.13"

[build-dependencies]
reqwest = { version = "0.13.2", features = ["blocking"] }
flate2 = "1.0"
tar = "0.4"
zip = "2.2"
zstd = "0.13"
sha2 = "0.10.8"
